[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.1.26"
#unity-rs = { git = "https://github.com/RinLovesYou/unity-rs.git" }
unity-rs = { path = "../unity" }
dobby-rs = { git = "https://github.com/RinLovesYou/dobby-rs" }
wasmtime = { version = "4.0", features = ["cranelift", "component-model"] }
wasmtime-wasi = "*"
thiserror = "*"
chrono = "*"
colored = "*"
anyhow = "*"
lazy_static = "*"
codegen = "0.1.3"
bytemuck = "*"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "minwindef", "std", "libloaderapi"] }

[lib]
name = "Bootstrap"
crate-type = ["cdylib"]
