[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.1.26"
#unity-rs = { git = "https://github.com/RinLovesYou/unity-rs.git" }
unity-rs = { path = "../unity" }
dobby-rs = { git = "https://github.com/RinLovesYou/dobby-rs" }
thiserror = "*"
chrono = "*"
colored = "*"
lazy_static = "*"
codegen = "*"
bytemuck = "*"
anyhow = "*"
scotch-host = "0.1"
bincode = "2.0.0-rc.2"
libloading = "*"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "minwindef", "std", "libloaderapi"] }

[lib]
name = "Bootstrap"
crate-type = ["cdylib"]
