[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.1.26"
#unity-rs = { git = "https://github.com/RinLovesYou/unity-rs.git" }
unity-rs = { path = "../unity" }
dobby-rs = { git = "https://github.com/RinLovesYou/dobby-rs" }
thiserror = "*"
chrono = "*"
colored = "*"
lazy_static = "*"
codegen = "*"
bytemuck = "*"
anyhow = "*"
scotch-host = "0.1"
libloading = "*"
libc = "0.2.140"
libc-stdhandle = "0.1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.46.0", features = [
    "Win32_Foundation",
    "Win32_System_Console",
]}

[lib]
name = "Bootstrap"
crate-type = ["cdylib"]
